道のbboxによる削除
